--- a/badge_sales_system/src/gui/BadgesWindow.form
+++ b/badge_sales_system/src/gui/BadgesWindow.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="Badges"/>
@@ -165,6 +165,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Add Badge"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addBadgeButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JComboBox" name="addSectionBox">
           <Properties>
@@ -288,6 +291,9 @@
           <Font name="Roboto" size="12" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="searchBadgeNumberFieldKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -303,6 +309,9 @@
           <Font name="Roboto" size="12" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="searchBadgeNameFieldKeyReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="searchSectionBox">
       <Properties>
@@ -318,6 +327,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="searchSectionBoxItemStateChanged"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -348,6 +360,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Print Badge List"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="printBadgeListButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
